# portfolio_backend

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  portfolio.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
api/: index.py
app/: cli.py  database.py  dependencies.py  main.py  user.json  user_seed.py
app/api/v1/endpoints/: experiences.py  profiles.py  projects.py  users.py
app/config/: config.py
app/custom_errors/: __init__.py  custom_errors.py
app/db/: __init__.py  db_config.py  session.py
app/db/config/: base_class.py  models.py
app/models/: __init__.py  models.py
app/repositories/: __init__.py  base_repository.py
app/routers/: experience_router.py
app/schemas/: __init__.py  schemas.py
app/services/: experience_service.py  experience_services.py  images_service.py  profile_services.py  project_services.py  user_services.py
app/utils/: bcrypt_utils.py  cloudinary_utils.py  jwt_utils.py  logger_util.py  pydantic_utils.py  utcnow.py
migrations/: env.py
migrations/versions/: 07ed7d7295dc_.py  a1bc9550d4d2_.py  ada0ac836cd7_.py
tests/: conftest.py
tests/api/v1/: test_experiences_endpoints.py  test_profiles_endpoints.py  test_projects_endpoints.py  test_users_endpoints.py
